--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <img src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8d2ViJTIwZGV2ZWxvcG1lbnR8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60" alt="Card Image">
                 <div class="card-content">
                     <h3>Web Development</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam gravida aliquam ligula ac efficitur.</p>
+                    <p>Web development is the need of todays generation</p>
                 </div>
             </div>
         </div>
